Restructured rsStocks.cpp into seveal smaller files and removed boilerplate code.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = rsS
 
-rsS_SOURCES = rsStocksMain.cpp rsStocks.cpp
+rsS_SOURCES = rsStocksMain.cpp rsStocks.cpp rsStocksIo.cpp rsStocksCalc.cpp rsStocksInt.cpp
 
 rsS_CPPFLAGS = --std=c++11 "-I${top_srcdir}/include"
 
